# resolume-sync-visuals

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-bugfix.yml  claude-maintenance.yml  claude-roadmap.yml  claude.yml
assets/: will_see_lora.json
config/: default.yaml
config/brands/: TEMPLATE.yaml  (+2 more)
docs/: API_COST_AUDIT.md  COST_OPTIMIZATION.md  INSTALLATION.md  RESEARCH.md  RESOLUME_AVC_FORMAT.md  ROADMAP.md  SECURITY_AUDIT.md  VISUAL_QUALITY_ANALYSIS.md  WEB_UI_ARCHITECTURE.md  resolume_reference.avc
scripts/: generate_test_tracks.py
server/: config.py  database.py  main.py  websocket.py
src/: __init__.py  bulk_processor.py  cli.py  cost_guard.py  encoder.py  lexicon.py  nas.py  pipeline.py  quality_checker.py  scanner.py  validation.py  watcher.py
tests/: conftest.py  test_ab_testing.py  test_analyzer.py  test_anticipation.py  test_auto_mix.py  test_batch.py  test_beat_effects.py  test_bulk_processor.py  test_cache.py  test_cli.py  test_composition.py  test_consistency.py  test_denon.py  test_e2e.py  test_encoder.py  test_features.py  test_fingerprint.py  test_generator.py  test_genre.py  test_genre_vocabulary.py  test_integration.py  test_key_color.py  test_lexicon.py  test_loop_detection.py  test_loop_generator.py  test_lyrics.py  test_metadata.py  test_model_router.py  test_montage.py  test_mood.py  test_mood_visuals.py  test_nas.py  test_new_features.py  test_output_validation.py  test_phrase_segments.py  test_pipeline.py  test_progress.py  test_prompts.py  test_quality_checker.py  test_quality_profiles.py  (+16 more)
web/: index.html  package-lock.json  package.json
(+129 files in other folders)
