[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "resolume-sync-visuals"
version = "0.1.0"
description = "Full-length AI video generation for DJ sets — Lexicon DJ to Resolume Arena via Denon StagelinQ"
requires-python = ">=3.9"
dependencies = [
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "replicate>=0.25.0",
    "openai>=1.0.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "httpx>=0.25.0",
    "tqdm>=4.65.0",
    "watchdog>=3.0.0",
    "mutagen>=1.47.0",
    "fal-client>=0.4.0",
    "demucs>=4.0.0",
    "lyricsgenius>=3.0.0",
]

[project.optional-dependencies]
mood = [
    "essentia-tensorflow>=2.1b6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
rsv = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*"]
